# mkdocs-with-confluence

./: .gitignore  .sops.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release_version.yaml
example/: Dockerfile  mkdocs.yml  secret.yaml
example/docs/section1/: page1.md  page2.md
example/docs/section1/sub_section/: page1.md
example/docs/section2/: page1.md  page2.md
mkdocs_with_confluence/: plugin.py
