[tool.poetry]
name = "mkdocs-with-confluence"
version = "0.3.3"
description = "MkDocs plugin for uploading markdown documentation to Confluence via Confluence REST API"
authors = ["Nikolai Rodionov <allanger@zohomail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_with_confluence/plugin.py"}]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.3.2"
poetry2setup = "^1.1.0"
md2cf = "^2.0.1"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
mkdocs-with-confluence = 'mkdocs_with_confluence.plugin:MkdocsWithConfluence'
